@@ -151,6 +151,7 @@
     <Image Include="res\ringenvmap.bmp">
       <Filter>res</Filter>
     </Image>
+    <Image Include="res\AOdither.bmp" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="vpinball.idl" />
