@@ -1189,6 +1189,42 @@ void Light::EditMenu(HMENU hmenu)
    EnableMenuItem(hmenu, ID_WALLMENU_ADDPOINT, MF_BYCOMMAND | ((m_d.m_shape != ShapeCustom) ? MF_GRAYED : MF_ENABLED));
 }
 
+void Light::AddPoint(int x, int y, const bool smooth)
+{
+   STARTUNDO
+      const Vertex2D v = m_ptable->TransformPoint(x, y);
+
+   std::vector<RenderVertex> vvertex;
+   GetRgVertex(vvertex);
+
+   int iSeg;
+   Vertex2D vOut;
+   ClosestPointOnPolygon(vvertex, v, &vOut, &iSeg, true);
+
+   // Go through vertices (including iSeg itself) counting control points until iSeg
+   int icp = 0;
+   for (int i = 0; i < (iSeg + 1); i++)
+      if (vvertex[i].fControlPoint)
+         icp++;
+
+   //if (icp == 0) // need to add point after the last point
+   //icp = m_vdpoint.Size();
+
+   CComObject<DragPoint> *pdp;
+   CComObject<DragPoint>::CreateInstance(&pdp);
+   if (pdp)
+   {
+      pdp->AddRef();
+      pdp->Init(this, vOut.x, vOut.y);
+      pdp->m_fSmooth = smooth;
+      m_vdpoint.InsertElementAt(pdp, icp); // push the second point forward, and replace it with this one.  Should work when index2 wraps.
+   }
+
+   SetDirtyDraw();
+
+   STOPUNDO
+}
+
 void Light::DoCommand(int icmd, int x, int y)
 {
    ISelect::DoCommand(icmd, x, y);
@@ -1225,39 +1261,9 @@ void Light::DoCommand(int icmd, int x, int y)
 
    case ID_WALLMENU_ADDPOINT:
    {
-      STARTUNDO
-         const Vertex2D v = m_ptable->TransformPoint(x, y);
-
-      std::vector<RenderVertex> vvertex;
-      GetRgVertex(vvertex);
-
-      int iSeg;
-      Vertex2D vOut;
-      ClosestPointOnPolygon(vvertex, v, &vOut, &iSeg, true);
-
-      // Go through vertices (including iSeg itself) counting control points until iSeg
-      int icp = 0;
-      for (int i = 0; i < (iSeg + 1); i++)
-         if (vvertex[i].fControlPoint)
-            icp++;
-
-      //if (icp == 0) // need to add point after the last point
-      //icp = m_vdpoint.Size();
-
-      CComObject<DragPoint> *pdp;
-      CComObject<DragPoint>::CreateInstance(&pdp);
-      if (pdp)
-      {
-         pdp->AddRef();
-         pdp->Init(this, vOut.x, vOut.y);
-         m_vdpoint.InsertElementAt(pdp, icp); // push the second point forward, and replace it with this one.  Should work when index2 wraps.
-      }
-
-      SetDirtyDraw();
-
-      STOPUNDO
+      AddPoint(x, y);
+      break;
    }
-   break;
    }
 }
 
