@@ -122,6 +122,7 @@ public:
    virtual void UpdatePropertyPanes();
    virtual void SetDefaultPhysics(bool fromMouseClick);
    virtual void ExportMesh(FILE *f);
+   virtual void AddPoint(int x, int y, const bool smooth=false);
 
    void WriteRegDefaults();
 
