@@ -135,6 +135,7 @@ public:
    virtual void UpdatePropertyPanes();
    virtual void SetDefaultPhysics(bool fromMouseClick);
    virtual void ExportMesh(FILE *f);
+   virtual void AddPoint(int x, int y, const bool smooth=false);
 
 private:
    void CurvesToShapes(Vector<HitObject> * const pvho);
